fixing mockups alignment

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -222,6 +222,8 @@ section {
   }
 }
 .mockups {
+  margin-top: 50px;
+
   &.-mockup-plus-metrics {
     display: flex;
     justify-content: space-around;
